z-index problem fixed

--- a/app/assets/stylesheets/controllers/_toolteiler.scss
+++ b/app/assets/stylesheets/controllers/_toolteiler.scss
@@ -69,7 +69,7 @@ section.toolTeiler {
     .mainContent {
       top:30px;
       position: relative;
-      z-index: 8;
+      //z-index: 8;
       //margin-bottom: 3em;
     }
   }
@@ -85,7 +85,7 @@ section.toolTeiler {
       width: calc(100% - 295px);
       top:40px;
       margin-bottom: 0;
-      z-index: 10;
+      //z-index: 10;
     }
   }
 
